merge: integrate PR #3 hermes-parity branch (managed conflict resolution, V38-V48 migrations, full suite green)
Integration of feat/hermes-parity-java-agent-20260903 (437 files) onto main via
pr3-integration with conflict-by-conflict resolution: main security fixes win
on all 84 UU conflicts, PR features ported element-by-element on top.

Migrations: PR V33-V44 renumbered to V38-V48 (live DB already at V37 — direct
Flyway collision). Dependencies: spring-websocket, commons-compress 1.27.1,
pdfbox, tomlj.

Main fixes preserved over PR code:
- CronJobService: per-source loadContextFromOutput (PR carried total-truncation
  bug + ignored cron output), CRON preamble, requireOwnership guards,
  clear-fields update contract
- McpLifecycleManager: PR version + validateInlineScript egress/persistence
  scan of inline scripts (0.1.219 fix)
- LangChain4jModelClient: PR version + developer-role rewrite,
  EmptyRetryCacheBypass (P-06), currentModelName
- WriteFileTool: PR verification echo + two-layer guard (denylist-first
  FileToolSafety + properties allowed-roots); single @Autowired ctor
- AgentStreamingService: ctxScrubber, guardrails, continuation policy intact

Fixes found by the integrated test suite (62 failures triaged to zero):
- ToolExecutionService: JSON failure envelopes for unknown-tool and loop-cap
  block carry "action":"block"; session-scoped guardrail; error redaction
  restored in failureWithContent (secrets leaked via raw error field)
- ProcessTool: unknown-id poll/log/wait/kill/close degrade to success
  {"status":"not_found"} (Hermes parity); session_id validation scoped to
  process-targeting actions; Integer timeout (0=default, <0=structured fail)
- SessionCompressionHelper: archive_and_compact port (deactivate+saveAll+clone
  concurrent tail by watermark) replacing destructive delete; watermark
  captured in readMessages; back-compat 5-arg ctor
- MessagePersistenceService: tool rows backfill toolCallName from the paired
  assistant call (session_search/s